// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiCardActionArea-root MuiBox-root css-1lqyjo8-MuiButtonBase-root-MuiCardActionArea-root"
    tabindex="0"
    type="button"
  >
    <div
      class="MuiBox-root css-hjbv5f"
    >
      <img
        alt="NFT Asset image"
        class="MuiBox-root css-djl8wu"
        src="assetIcon.jpg"
      />
    </div>
    <div
      class="MuiBox-root css-120alf"
      data-testid="asset-descriptor"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-11hf9u5-MuiTypography-root"
      >
        NFT Asset
      </h5>
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1xin5va-MuiTypography-root"
      >
        1
         items
      </h5>
    </div>
    <span
      class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
    />
  </button>
</div>
`;

exports[`renders a skeleton when variant is Collection but assetQuantity is undefined 1`] = `
<div
  class="MuiBox-root css-120alf"
  data-testid="asset-descriptor"
>
  <h5
    class="MuiTypography-root MuiTypography-h5 css-11hf9u5-MuiTypography-root"
  >
    NFT Asset
  </h5>
  <h5
    class="MuiTypography-root MuiTypography-h5 css-1xin5va-MuiTypography-root"
  >
    <span
      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1h2g3k5-MuiSkeleton-root"
      style="width: 12px;"
    />
  </h5>
</div>
`;
